[package]
name = "otp_service"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "otp_server"
#path = "src/main.rs"

[dependencies]
tokio = { version = "1.37.0", features = [ "rt-multi-thread", "net", "socket2", "macros", "io-std", "io-util", "sync" ] }
tonic = "0.11.0"
prost = "0.12.3"
aws-sdk-dynamodb = "1.20.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11.0"